; ModuleID = '/home/carl/AnghaBench/libgit2/tests/refs/branches/extr_remote.c_test_refs_branches_remote__ambiguous_remote_returns_error.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/refs/branches/extr_remote.c_test_refs_branches_remote__ambiguous_remote_returns_error.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@g_repo = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [8 x i8] c"addtest\00", align 1
@.str.1 = private unnamed_addr constant [34 x i8] c"http://github.com/libgit2/libgit2\00", align 1
@.str.2 = private unnamed_addr constant [33 x i8] c"refs/heads/*:refs/remotes/test/*\00", align 1
@remote_tracking_branch_name = common dso_local global i32 0, align 4
@GIT_EAMBIGUOUS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_refs_branches_remote__ambiguous_remote_returns_error() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca i32, align 4
  %3 = load i32, i32* @g_repo, align 4
  %4 = call i32 @git_remote_create_with_fetchspec(i32** %1, i32 %3, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str.1, i64 0, i64 0), i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str.2, i64 0, i64 0))
  %5 = call i32 @cl_git_pass(i32 %4)
  %6 = load i32*, i32** %1, align 8
  %7 = call i32 @git_remote_free(i32* %6)
  %8 = call i32 (...) @git_error_clear()
  %9 = call i32 @memset(i32* %2, i32 0, i32 4)
  %10 = load i32, i32* @g_repo, align 4
  %11 = load i32, i32* @remote_tracking_branch_name, align 4
  %12 = call i32 @git_branch_remote_name(i32* %2, i32 %10, i32 %11)
  %13 = load i32, i32* @GIT_EAMBIGUOUS, align 4
  %14 = call i32 @cl_git_fail_with(i32 %12, i32 %13)
  %15 = call i32* (...) @git_error_last()
  %16 = icmp ne i32* %15, null
  %17 = zext i1 %16 to i32
  %18 = call i32 @cl_assert(i32 %17)
  ret void
}

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_remote_create_with_fetchspec(i32**, i32, i8*, i8*, i8*) #1

declare dso_local i32 @git_remote_free(i32*) #1

declare dso_local i32 @git_error_clear(...) #1

declare dso_local i32 @memset(i32*, i32, i32) #1

declare dso_local i32 @cl_git_fail_with(i32, i32) #1

declare dso_local i32 @git_branch_remote_name(i32*, i32, i32) #1

declare dso_local i32 @cl_assert(i32) #1

declare dso_local i32* @git_error_last(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
